styles/widgets/generic/scheduler.generic.less
/* ... */
.dx-scheduler-work-space-month .dx-scheduler-date-table-cell {
    font-size: @GENERIC_SCHEDULER_MONTH_DATE_TEXT_SIZE;
}

.dx-scheduler-header-panel,
.dx-scheduler-time-panel {
    font-size: @GENERIC_SCHEDULER_WORKSPACE_INFO_TEXT_SIZE;
}


.dx-scheduler-work-space-grouped:not(.dx-scheduler-agenda) .dx-scheduler-group-row th,
.dx-scheduler-work-space.dx-scheduler-work-space-grouped:not(.dx-scheduler-work-space-vertical-grouped):not(.dx-scheduler-timeline) .dx-scheduler-last-group-cell {
    border-right: 1px solid @scheduler-group-separator-border-color;

        &:last-child {
            border-right: none;
        }

    .dx-rtl & {
        border-left: 1px solid @scheduler-group-separator-border-color;
        border-right: @SCHEDULER_BASE_BORDER;

        &:last-child {
            border-left: none;
        }
    }
}

.dx-scheduler-appointment {
    border-left: @GENERIC_SCHEDULER_APPOINTMENT_TRANSPARENT_LEFT_BORDER;
    border-right: @GENERIC_SCHEDULER_APPOINTMENT_TRANSPARENT_RIGHT_BORDER;

    &.dx-state-focused {
        color: @scheduler-appointment-focus-color;
    }
}

.dx-scheduler-dropdown-appointment {
    border-bottom: 1px solid @SCHEDULER_BASE_BORDER_COLOR;
}

.dx-scheduler-dropdown-appointment-date {
    color: @scheduler-dropdown-appointment-date-color;
}

.dx-scheduler-work-space-grouped {
    &:not(.dx-scheduler-work-space-all-day):not(.dx-scheduler-timeline):not(.dx-scheduler-agenda):not(.dx-scheduler-work-space-vertical-grouped):not(.dx-scheduler-work-space-horizontal-grouped) {
        @headerScrollBarTopOffset: @GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP;
        .dx-scheduler-header-scrollable-mixin(@headerScrollBarTopOffset);
        .dx-scheduler-group-mixin(@headerScrollBarTopOffset);

        &.dx-scheduler-work-space-day {
            .dx-scheduler-header-scrollable-mixin(@headerScrollBarTopOffset - @GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT);
            .dx-scheduler-group-mixin(@headerScrollBarTopOffset - @GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT);
        }
    }
}

.dx-scheduler-work-space.dx-scheduler-timeline-week,
.dx-scheduler-work-space.dx-scheduler-timeline-work-week {
    .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT * 2 + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);

    &.dx-scheduler-work-space-grouped {
        .dx-scheduler-sidebar-scrollable {
            padding-bottom: @GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT * 2 + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP;
            margin-bottom: -(@GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT * 2 + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);

            &:before {
                height: @GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT * 2 + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP + 1;
                margin-top: -(@GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT * 2 + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP + 1);
            }
        }
    }

    .dx-scrollable.dx-scheduler-date-table-scrollable {
        padding-bottom: @GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT * 2 + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP;
        margin-bottom: -(@GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT * 2 + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
    }
}

.dx-scheduler-work-space-both-scrollbar {
    .dx-scheduler-all-day-title {
        background-color: @scheduler-alldaypanel-bg;

        &:before {
            background-color: @SCHEDULER_WORKSPACE_BACKGROUND_COLOR;
        }
    }

    .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);

    &.dx-scheduler-work-space-day {
        .dx-scheduler-header-scrollable-mixin(0);
    }

    &.dx-scheduler-work-space.dx-scheduler-work-space-all-day {
        .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);

        &.dx-scheduler-work-space-all-day-collapsed {
            .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
        }

        &.dx-scheduler-work-space-day {
            &:not(.dx-scheduler-work-space-count) {
                .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);

                &.dx-scheduler-work-space-all-day-collapsed {
                    .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
                }
            }

            &:not(.dx-scheduler-work-space-grouped) {
                .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT);

                &.dx-scheduler-work-space-all-day-collapsed {
                    .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT);
                }
            }
        }
    }

    &.dx-scheduler-work-space.dx-scheduler-work-space-month {
        .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
    }
}
/* ... */

